--- a/src/components/sidebar.css
+++ b/src/components/sidebar.css
@@ -4,7 +4,7 @@
     left: 0;
     width: 80px; /* Sidebar width */
     height: 100vh; /* Full height */
-    background-color: #1C1D20;
+    /* background-color: #1C1D20; */
     display: flex;
     flex-direction: column;
     align-items: center;
