--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html, body {
   font-family: "Lexend", sans-serif;
   height: 100vh;
   width: 100%;
+  background-color: var(--bg-primary);
 }
 
 .App {
@@ -12,6 +13,8 @@ html, body {
   height: 100vh;
   width:100%;
   overflow: hidden;
+  background-color: var(--bg-primary);
+
 }
 
 .Routes {
