--- a/src/pages/Dashboard.css
+++ b/src/pages/Dashboard.css
@@ -46,6 +46,7 @@
   justify-content: center;
   font-size: 24px;
   font-weight: 600;
+  color: white;
 }
 
 .profile-dropdown-user-info {
@@ -134,9 +135,6 @@ html, body {
   margin: 0;
   height: 100vh;
   width: 100%;
-  scrollbar-width: thin;
-  scrollbar-color: #4a4e55 #2A2C32;
-  scrollbar-gutter: stable;
 }
 
 .container-dashboard{
@@ -155,7 +153,7 @@ html, body {
   margin: 20px 20px 0 80px;
   padding: 20px 40px;
   padding-bottom: 0;
-  border-radius: 30px 30px 0 0;
+  border-radius: 45px 45px 0 0;
   display: flex;
   align-items: center; /* Vertically center all items */
   justify-content: space-between; /* Space between title and user controls */
@@ -203,6 +201,7 @@ html, body {
 
 .initials-avatar {
   display: flex;
+  color: white;
   align-items: center;
   justify-content: center;
   font-size: 16px;
@@ -495,6 +494,7 @@ p {
 .notifications-panel {
   width: 530px;
   min-width: 530px;
+  background-color: var(--bg-secondary);
   border-radius: 25px;
   padding: 20px;
   height: calc(90vh - 150px); /* Adjusted to match the bottom spacing */
