--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -201,6 +201,10 @@ h1 {
   border-bottom: 3px solid var(--border-color);
 }
 
+.member-count{
+  color: var(--text-primary);
+}
+
 /* Chatbox container styles */
 .chatboxContainer {
   color: white;
