--- a/src/components/friendsChatbox.css
+++ b/src/components/friendsChatbox.css
@@ -22,7 +22,7 @@
     margin-bottom: 10px; /* Space between messages and input */
     box-sizing: border-box; /* Include padding in the element's total height */
     scrollbar-width: thin;
-    scrollbar-color: var(--scrollbar-thumb2) var(--scrollbar-track2);
+    scrollbar-color: var(--bg-secondary) var(--bg-tertiary);
 }
 
 /* Ensure proper alignment of sent/received messages */
@@ -53,6 +53,7 @@
     color: white;
     display: inline-block;
     transition: all 0.2s ease;
+    background-color: var(--bg-message);
 }
 
 .message-options {
