--- a/src/pages/social.css
+++ b/src/pages/social.css
@@ -8,6 +8,7 @@ html, body {
 
 .container-friends {
   display: flex;
+  background-color: var(--bg-secondary);
   margin: 20px 20px 20px 80px;
   height: calc(100vh - 40px); /* Subtract the margin space to avoid overflow */
   width: calc(100% - 100px); /* Adjusted dynamically for the sidebar */
@@ -54,19 +55,17 @@ html, body {
   padding: 8px 12px;
   margin-right: 10px;
   border-radius: 15px;
-  background-color: #ffffff00;
+  background-color: var(--filter-button);
   border: none;
   cursor: pointer;
   align-items: center;
   transition: background-color 0.2s ease-in-out;
 }
-
 .filterOption.active {
-  background-color: #ffffff5d;
+  background-color: var(--filter-button-active);
 }
-
 .filterOption:hover {
-  background-color: #ffffff1a;
+  background-color: var(--filter-button-hover);
 }
 
 #filter-status{
@@ -165,6 +164,10 @@ h1 {
   bottom: 0;
   left: 28px;
   border: 3px solid var(--bg-button);
+  transition: border 0.2s ease-in-out;
+}
+.friend-button:hover .status-indicator{
+  border: 3px solid var(--button-hover);
 }
 
 .status-indicator.online {
