small color changes

--- a/src/theme.css
+++ b/src/theme.css
@@ -81,7 +81,7 @@
     --bg-primary: #e7e7eb;
     --bg-secondary: #ffffff;
     --bg-tertiary: #f0f2f5;
-    --bg-input: #e7e8e9;
+    --bg-input: #d5d6d7;
     --bg-dark: #e6e6e9;
     --bg-button: #ebedf0;
     --bg-dropdown: #ffffff;
