--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,10 @@
-
+@import url('https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap');
 html, body {
+  background-color: #1C1D20;
   margin: 0;
   font-family: "Lexend", sans-serif;
   height: 100vh;
   width: 100%;
-  background-color: var(--bg-primary);
 }
 
 .App {
@@ -13,8 +13,6 @@ html, body {
   height: 100vh;
   width:100%;
   overflow: hidden;
-  background-color: var(--bg-primary);
-
 }
 
 .Routes {
